<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btnChooseContact"
            android:textSize="18sp"
            android:hint="@string/receiverNo"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnChooseContact"
            android:layout_width="80dp"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:text="@string/chooseContact" />
    </RelativeLayout>
    <EditText
            android:id="@+id/editSecret"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/secret"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.41"
        android:gravity="top"
        android:textSize="28sp"
        android:hint="@string/emptyField"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSendSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/send" >
    </Button>

</LinearLayout>