<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editSecret"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/secret"
        android:inputType="text|textPassword"
        android:textSize="18sp" >

            <requestFocus />
        </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.41"
        android:gravity="top"
        android:textSize="28sp"
        android:hint="@string/emptyField"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnDecrypt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/decrypt" >
    </Button>

</LinearLayout>